--- a/V2.1
+++ b/V2.1
@@ -20,11 +20,9 @@ try:
 
 
 #To do list
-#Moniter issues for big moniters 4k
-#including error reporting
 #Elite games bot doesnt perform well  add 2 attack distances as well as a way to know of elite matches
 #Fix movement spamming and make it more humman (Holding the buttons instead of spamming)
-
+#Making Mouse Movement
 
 
 
